[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/guns/48.png" type="Texture" id=1]
[ext_resource path="res://weapons/machine_gun.gd" type="Script" id=2]

[node name="MachineGun" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="SpawnPositionHigh" type="Position2D" parent="."]
position = Vector2( 15, -10 )

[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
